--- a/scss/layouts/_site_content.scss
+++ b/scss/layouts/_site_content.scss
@@ -1,5 +1,6 @@
 #siteContent{
     margin-bottom: 2.857em;
+    overflow: hidden;
     .breadcrumb{
         background-color: transparent;
         padding: 1.786em 0 1.6em;
